Fixed the title not aligning properly on big screen widths.

--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     background-color: rgb(28, 39, 68);
     padding: 15px 10px;
@@ -52,12 +52,9 @@ html {
 
 h1 {
     color: white;
-    position: absolute;
-    top: 10px;
-    right: 15px;
-    left: 15px;
     font-weight: normal;
     font-size: 4rem;
+    margin-bottom: 15px;
 }
 
 #container {
